2006-11-10  Thomas Heller  <theller@python.net>

	* ctypeslib/h2xml.py: Refactored a function compile_to_xml() out
	of main(), CompilerErrors are catched in main() but not in
	compile_to_xml().

	Added test that an exception is raised in
	dynamic_module.include() when a CompilerError occurs.

	* ctypeslib/codegen/cparser.py: No configuration file
	"~/ctypes_codegen/cparser.cfg" is used (or needed) anymore.

2006-11-09  Thomas Heller  <theller@python.net>

	* Inmplemented this change in a different way again.

	* Reverted this change because it does not (yet) work:

	* ctypeslib/codegen/cparser.py: The final xml-file is now created
	before searching for preprocessor definitions (if no output file
	is requested it will be deleted afterwards).  The advantage is
	that compilation errors are detected early and don't disturb the
	cpp magic.

2006-11-08  Thomas Heller  <theller@python.net>

	* ctypeslib\dynamic_module.y: Generate the .h, .xml, and
	.typedesc.bz2 files in a temporary directory.  Should that
	directory contain the GCCXML version number? Or the ctypeslib
	version number?

2006-11-07  Thomas Heller  <theller@python.net>

	* ctypeslib\codegen\gccxmlparser.py: Patch from Giovanni Bajo: Use
	cElementtree, if installed, instead of xml.sax for XML parsing.
	This gives a significant speedup.

2006-11-03  Thomas Heller  <theller@python.net>

	* ctypeslib\experimental\*.py contains experimental stuff.  This
	directory is *not* package because it doesn't contain an
	__init__.py file.
	
	* ctypeslib\dynamic_module.py: A module implementing incremental,
	dynamic code generation. Removed the former ctypeslib\dynmod.py.

	* Renamed restructured the ctypes_codegen package.  It is now
	named ctypeslib, with a subpackage ctypeslib.codegen.  The
	ctypeslib package now contains the h2xml and xml2py scripts.

2006-10-31  Thomas Heller  <theller@python.net>

	* ctypes_codegen\codegenerator.py (Generator.init_value): Reworked