@@ -1,0 +1,2 @@
+# ctypeslib.contrib contains contributed code that does not yet
+# fit elsewhere.
